# MK32

./: .gitignore  CMakeLists.txt  sdkconfig
components/battery_monitor/: CMakeLists.txt
components/ble_new/: CMakeLists.txt  hid_device_le_prf.c
components/espnow/: CMakeLists.txt
components/nvs_funcs/: CMakeLists.txt
components/r_encoder/: CMakeLists.txt
components/u8g2_OLED/: CMakeLists.txt
main/: CMakeLists.txt  keyboard_config.h  keymap.c  matrix.c
